# water-solitons

./: README.md  pyproject.toml  water-solitons.ipynb
height_data/: height_data_0.txt  height_data_1.txt  height_data_10.txt  height_data_100.txt  height_data_11.txt  height_data_12.txt  height_data_13.txt  height_data_14.txt  height_data_15.txt  height_data_16.txt  height_data_17.txt  height_data_18.txt  height_data_19.txt  height_data_2.txt  height_data_20.txt  height_data_200.txt  height_data_201.txt  height_data_202.txt  height_data_21.txt  height_data_22.txt  height_data_23.txt  height_data_24.txt  height_data_25.txt  height_data_26.txt  height_data_27.txt  height_data_28.txt  height_data_29.txt  height_data_3.txt  height_data_30.txt  height_data_31.txt  height_data_32.txt  height_data_33.txt  height_data_34.txt  height_data_35.txt  height_data_36.txt  height_data_37.txt  height_data_4.txt  height_data_5.txt  height_data_50.txt  height_data_51.txt  (+8 more)
norm_height_data/: norm_height_data_0.txt  norm_height_data_1.txt  norm_height_data_10.txt  norm_height_data_100.txt  norm_height_data_11.txt  norm_height_data_12.txt  norm_height_data_13.txt  norm_height_data_14.txt  norm_height_data_15.txt  norm_height_data_16.txt  norm_height_data_17.txt  norm_height_data_18.txt  norm_height_data_19.txt  norm_height_data_2.txt  norm_height_data_20.txt  norm_height_data_200.txt  norm_height_data_201.txt  norm_height_data_202.txt  norm_height_data_203.txt  norm_height_data_21.txt  norm_height_data_22.txt  norm_height_data_23.txt  norm_height_data_24.txt  norm_height_data_25.txt  (+25 more)
(+49 files in other folders)
