[project]
name = "water-solitons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.1",
    "matplotlib-inline>=0.2.2",
    "numpy>=2.5.1",
    "scipy>=1.18.0",
    "uncertainties>=3.2.3",
]
